added CRUD operations for trainers
